Prevent navigation from overlapping content.
When in the smallest device size, the navigation becomes fixed-position — which overlaps content. This commit adds a spacer to the layout which fills the space that the navigation takes up, which prevents the overlap.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,7 @@
+.navigation-bar-header-spacer {
+  height: 50px;
+}
+
 .hero-big-em {
   color: rgba(0,0,0,0.1);
 }
